samples/_failures_safe/1761073893_83de5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4d9dfb8.c:113: error: expected ‘;’, ‘,’ or ‘)’ at end of input
